Adding Camel Case Json Result

--- a/rdkhomesolutions/RDKHomeSolutions.Website2/Views/Shared/_Layout.cshtml
+++ b/rdkhomesolutions/RDKHomeSolutions.Website2/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RDK Home Solutions</title>
-    @Styles.Render("~/Content/css")
+    @Styles.Render("~/Content/appcss")
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
@@ -131,7 +131,7 @@
     @Scripts.Render("~/bundles/bootstrap")
     @Scripts.Render("~/bundles/carousel")
     @Scripts.Render("~/bundles/toastr")
-    @Scripts.Render("~/bundles/app")
+    @Scripts.Render("~/bundles/webapp")
     @RenderSection("scripts", required: false)
 </body>
 </html>
